RESOLVED FIXED23619
ASSERT(!error.isNull()) in DocumentLoader::mainReceivedError() when an SVG image load is cancelled
https://bugs.webkit.org/show_bug.cgi?id=23619
Summary ASSERT(!error.isNull()) in DocumentLoader::mainReceivedError() when an SVG im...
Alexey Proskuryakov
Reported 2009-01-29 03:24:56 PST
I'm seeing a random assertion failure when running layout tests due to a recently added assertion: void DocumentLoader::mainReceivedError(const ResourceError& error, bool isComplete) { ASSERT(!error.isNull()); ... The problem is that EmptyFrameLoaderClient always creates null errors.
Attachments
proposed patch (3.67 KB, patch)
2009-01-29 04:02 PST, Alexey Proskuryakov
zimmermann: review+
Alexey Proskuryakov
Comment 1 2009-01-29 04:02:36 PST
Created attachment 27145 [details] proposed patch
Nikolas Zimmermann
Comment 2 2009-01-29 13:55:04 PST
Comment on attachment 27145 [details] proposed patch Looks sane, if the ChangeLog gets fixed, r=me.
Alexey Proskuryakov
Comment 3 2009-01-29 13:55:37 PST
Committed revision 40374.
Note You need to log in before you can comment on or make changes to this bug.