        Reviewed by Nikolas Zimmermann.

https://bugs.webkit.org/show_bug.cgi?id=23619
        ASSERT(!error.isNull()) in DocumentLoader::mainReceivedError() when an SVG image load
        is cancelled

        Covered by existing tests (as a random crash).

        * loader/EmptyClients.h:
        (WebCore::EmptyFrameLoaderClient::cancelledError):
        (WebCore::EmptyFrameLoaderClient::blockedError):
        (WebCore::EmptyFrameLoaderClient::cannotShowURLError):
        (WebCore::EmptyFrameLoaderClient::interruptForPolicyChangeError):
        (WebCore::EmptyFrameLoaderClient::cannotShowMIMETypeError):
        (WebCore::EmptyFrameLoaderClient::fileDoesNotExistError):
        (WebCore::EmptyFrameLoaderClient::pluginWillHandleLoadError):
        Create non-null errors.



Canonical link: https://commits.webkit.org/32557@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40374 268f45cc-cd09-0410-ab3c-d52691b4dbfc